# breadmind

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.test.yml  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
Documents/Plans/: 2026-04-04-breadmind-v2-framework-design.md  2026-04-04-breadmind-v2-implementation-plan.md
config/: config.development.yaml.example  config.production.yaml.example  config.yaml  model_pricing.yaml  safety.yaml  settings.json
deploy/alerts/: prometheus-rules.yaml
deploy/install/: install-worker.ps1  install-worker.sh  install.ps1  install.sh  uninstall.ps1  uninstall.sh
deploy/smoke/: pilot-targets.yaml.example
docker/postgres/: Dockerfile  init.sql
docker/tool-runner/: Dockerfile
docs/: hooks-v2.md  skills-v2.md
docs/operations/: episodic-memory.md  multi-tenancy.md
docs/pilot/: lead-reviewer-guide.md  pilot-team-onboarding.md  rollout-checklist.md
docs/plans/: 2026-03-14-core-agent-plan.md  2026-03-14-mcp-clawhub-plan.md
docs/specs/: 2026-03-14-breadmind-design.md  2026-03-14-deployment-design.md  2026-03-14-mcp-clawhub-design.md  2026-03-14-mcp-store-design.md
rt-relay/: .gitignore  .golangci.yml  Dockerfile  Makefile  README.md  go.mod  go.sum
scripts/: check_go_no_go.py  generate_icons.py  seed_pilot_data.py
src/breadmind/: __main__.py  config.py  config_env.py  config_types.py  constants.py  main.py  metrics.py  uninstall.py
tests/: conftest.py  factories.py  test_adapter_registry.py  test_adapter_validation.py  test_agent.py  test_analyzers.py  test_auth.py  test_auto_connectors.py  test_auto_discovery.py  test_behavior_tracker.py  test_builtin_event_adapter.py  test_builtin_task_adapter.py  test_builtin_tools.py  test_coding_delegate.py  test_commander.py  test_config_mcp.py  test_config_pydantic.py  test_conftest_factories.py  test_constants.py  test_contact_file_tools.py  test_contact_kg_promotion.py  test_container.py  test_context_provider.py  test_cross_domain.py  test_dag_executor.py  test_domain_skills.py  test_embedding.py  test_env_scanner.py  test_github_issues_adapter.py  test_google_calendar_adapter.py  test_google_contacts_adapter.py  test_google_drive_adapter.py  test_infra_discovery.py  test_integration.py  test_integration_network.py  test_integration_routes.py  test_intent.py  test_intent_complexity.py  test_intent_expansion.py  test_jira_adapter.py  (+82 more)
tests/cli/: test_alt_screen.py  test_backup_restore.py  test_bare_mode.py  test_bidi_stream.py  test_chat.py  test_cost_display.py  test_daemon.py  test_doctor.py  test_doctor_fix.py  test_file_loader.py  test_github_actions.py  test_jobs_commands.py  test_keybindings.py  test_migrate.py  test_output_formats.py  test_powerup.py  test_pr_session.py  test_security_audit.py  test_service.py  test_session_fork.py  test_session_manager.py  test_setup.py  test_ui.py  test_updater.py
tests/coding/: test_job_db_writer.py  test_job_executor.py  test_job_log_stream.py  test_job_models.py  test_job_store.py  test_job_tracker_db.py  test_local_executor_cancel.py  test_log_buffer.py  test_log_redact_streaming.py  test_metrics.py  test_migration_007.py  test_retention.py  test_tool.py
tests/companion/: conftest.py  test_config.py  test_platform_adapter.py  test_registry_companions.py  test_runtime.py  (+2 more)
(+1363 files in other folders)
